--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
-    "@mui/x-data-grid": "^6.1.0", 
+    "@mui/x-data-grid": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
