--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.2.0",
     "formik": "^2.2.9",
+    "gsap": "^3.11.5",
     "openssl": "^2.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
