--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
+    "svg-gauge": "^1.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.0"
   },
